<resources>
    <string name="app_name">Dicoding Event App</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="category">Seminar</string>
    <string name="owner">oleh: %1$s</string>
    <string name="quota">sisa kuota: %1$s</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="finished">Finished Events</string>
    <string name="begin">Terbuka Hingga: %1$s</string>
    <string name="quota_detail">Sisa Kuota: %1$d</string>
    <string name="location">Lokasi: %1$s</string>
    <string name="search_hint">Cari event</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="register">Register</string>
    <string name="recomendation">Recommendation event for you!</string>
    <string name="detail">Detail Event</string>
    <string name="search">Search Event</string>
    <string name="tidak_ada_koneksi_internet">Tidak ada koneksi internet</string>
    <string name="message_internet">Mohon periksa koneksi internet Anda.</string>
    <string name="event_tidak_ditemukan">Event tidak ditemukan</string>
    <string name="message_not_found">Maaf, tidak ada event yang sesuai dengan pencarian Anda.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>

</resources>