<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_upcoming"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/baseline_event_finished_24"
        android:title="@string/title_finished"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/setting"
        app:showAsAction="never"/>
</menu>