<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    android:layout_margin="6dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_upcoming"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txt_category_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:paddingHorizontal="6dp"
            android:background="@drawable/textview_border"
            android:layout_toEndOf="@id/img_upcoming" />

        <TextView
            android:id="@+id/txt_name_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/img_upcoming"
            android:layout_below="@id/txt_category_upcoming"
            android:maxLines="3"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"/>

        <TextView
            android:id="@+id/txt_owner_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_upcoming"
            android:layout_below="@id/txt_name_upcoming"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/owner"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/txt_quota_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_upcoming"
            android:layout_below="@id/txt_owner_upcoming"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:text="@string/quota"
            android:textSize="12sp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>