<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

   <TextView
       android:id="@+id/txt_title_app"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/dicoding_event"
       android:textSize="24sp"
       android:textColor="@color/purple_500"
       android:textStyle="bold"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/txt_upcoming_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_title_app"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_upcoming"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_upcoming_event"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_finished_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_pager_upcoming"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    <androidx.viewpager2.widget.ViewPager2-->
<!--        android:id="@+id/view_pager_finished"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/txt_finished_event"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>